--- a/src/app/tp5/tp5.component.html
+++ b/src/app/tp5/tp5.component.html
@@ -22,7 +22,7 @@
   class= "glyphicon"
   [ngClass]="{ 'glyphicon-star': isSelected,'glyphicon-star-empty': !isSelected}"
 
-[ngClass]="{
+[ngStyle]="{
 'color': isSelected ?'red' : 'blue',
 'font-size': isSelected ? '40px' : '20px'
 }"
